syntax = "proto3";

package forwarder;

option go_package = "proto/forwarder;forwarder";

message RegisterChannelSessionRequest {
    uint64 channelId = 1;
    uint64 userId = 2;
    string subscriber = 3;
}

message RegisterChannelSessionResponse {
}

message RemoveChannelSessionRequest {
    uint64 channelId = 1;
    uint64 userId = 2;
}

message RemoveChannelSessionResponse {
}

service ForwarderService {
    rpc RegisterChannelSession(RegisterChannelSessionRequest) returns (RegisterChannelSessionResponse) {}
    rpc RemoveChannelSession(RemoveChannelSessionRequest) returns (RemoveChannelSessionResponse) {}
}